How It Works Commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultra NFT</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
     <body>
         <nav class="navbar">
@@ -25,5 +25,38 @@
             </div>
         </nav>
         <section class="hero"></section>
+        <section class="how-it-works">
+            <h1 class="title">How it Works</h1>
+            <div class="icon-boxes">
+                <div class="icon">
+                    <div class="icon-button gradient-1">
+                        <div class="icon-img wallet"></div>
+                    </div>
+                    <h1>Set up your Wallet</h1>
+                    <p>Once you've set up your wallet of choice, connect it to OpenSeaby clicking the NFT Marketplacein the top right corner.</p>
+                </div>
+                <div class="icon">
+                    <div class="icon-button gradient-2">
+                        <div class="icon-img collection"></div>
+                    </div>
+                    <h1>Create your Collection</h1>
+                    <p>Click Create and set up your collection. Add social links, a description, profile & banner images, and set a secondary sales fee.</p>
+                </div>
+                <div class="icon">
+                    <div class="icon-button gradient-3">
+                        <div class="icon-img image"></div>
+                    </div>
+                    <h1>Add your NFTs</h1>
+                    <p>Upload your work (image, video, audio, or 3D art), add a title and description, and customize your NFTs with properties, stats</p>
+                </div>
+                <div class="icon">
+                    <div class="icon-button gradient-4">
+                        <div class="icon-img store"></div>
+                    </div>
+                    <h1>List them for Sale</h1>
+                    <p>Choose between auctions, fixed-price listings, and declining-price listings. You choose how you want to sell your NFTs!</p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
