Live Auctions Header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultra NFT</title>
+    <link rel="icon" href="/assets/Logo.svg">
     <link rel="stylesheet" href="/styles.css">
 </head>
     <body>
@@ -24,7 +25,9 @@
                 </ul>
             </div>
         </nav>
-        <section class="hero"></section>
+        <section class="hero">
+
+        </section>
         <section class="how-it-works">
             <h1 class="title">How it Works</h1>
             <div class="icon-boxes">
@@ -56,6 +59,12 @@
                     <h1>List them for Sale</h1>
                     <p>Choose between auctions, fixed-price listings, and declining-price listings. You choose how you want to sell your NFTs!</p>
                 </div>
+            </div>
+        </section>
+        <section class="live-auctions">
+            <div class="header">
+                <h1 class="title">Live Auctions</h1>
+                <button class="explore-button">Explore All</button>
             </div>
         </section>
     </body>
