update navbar and add icons

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <title>Ultra NFT</title>
     <link rel="icon" href="/assets/Logo.svg">
     <link rel="stylesheet" href="/styles.css">
+    <script src="https://kit.fontawesome.com/18d0319d23.js" crossorigin="anonymous"></script>
 </head>
     <body>
         <nav class="navbar">
             <div class="navbar-left">
                 <div class="logo-img"></div>
                 <h1 class="logo-text">Ultra NFT</h1>
-                <input type="text" placeholder="Search">
+                <div class="search-bar">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="Search">
+                </div>
             </div>
             <div class="navbar-right">
                 <ul class="menu">
@@ -21,7 +25,10 @@
                     <li>Explore</li>
                     <li>Pages</li>
                     <li>Contact Us</li>
-                    <button class="navbar-button">Connect Wallet</button>
+                    <div class="connect-button">
+                        <i class="fa-solid fa-wallet"></i>
+                        <button class="navbar-button">Connect Wallet</button>
+                    </div>
                 </ul>
             </div>
         </nav>
@@ -64,7 +71,10 @@
         <section class="live-auctions">
             <div class="header">
                 <h1 class="title">Live Auctions</h1>
-                <button class="explore-button">Explore All</button>
+                <div class="explore-all">
+                    <i class="fa-solid fa-rocket"></i>
+                    <button class="explore-button">Explore All</button>
+                </div>
             </div>
             <div class="Slider-Card">
                 <div class="card">
@@ -81,5 +91,8 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            
+        </footer>
     </body>
 </html>
