--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
             </div>
         </nav>
         <section class="hero">
-
+            <div class="hero-left">
+                <div class="hero-title">
+                    <h1 class="title-white">Discover, collect, and sell extraordinary </h1>
+                    <h1 class="title-pink">NFTs</h1>
+                </div>
+                <p>NFT is the world's first and largest NFT marketplace</p>
+                <div class="hero-btn">
+                    <button class="hero-btn hero-explore">Explore</button>
+                    <button class="hero-btn hero-create">Create</button>
+                </div>
+            </div>
+            <div class="hero-right"></div>
         </section>
         <section class="how-it-works">
             <h1 class="title">How it Works</h1>
@@ -81,5 +92,37 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="footer-left">
+                <div class="footer-logo">
+                    <div class="logo-img"></div>
+                    <h1 class="logo-text">Ultra NFT</h1>
+                </div>
+                <p>We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit, Ut enim ad minim veniam, quis nostrud equip consectetur adipiscing ex ea commodo dolor consequat</p>
+                <div class="contact">
+                    <div class="icon img1"></div>
+                    <div class="contact-info">
+                        <p class="contact-info-title">Phone</p>
+                        <p class="contact-info-detail"></p>
+                    </div>
+                </div>
+                <div class="contact">
+                    <div class="icon img2"></div>
+                    <div class="contact-info">
+                        <p class="contact-info-title">Mail</p>
+                        <p class="contact-info-detail"></p>
+                    </div>
+                </div>
+                <div class="contact">
+                    <div class="icon img3"></div>
+                    <div class="contact-info">
+                        <p class="contact-info-title">Address</p>
+                        <p class="contact-info-detail"></p>
+                    </div>
+                </div>
+            </div>
+           
+            
+        </footer>
     </body>
 </html>
